# diffbot-kg-chatbot

./: .env.template  .gitignore  Makefile  README.md  Untitled.ipynb  diffbot_enhance_people_params.ipynb  diffbot_enhance_person.py  docker-compose.yml
.devcontainer/: devcontainer.json
api/: Dockerfile  pyproject.toml
api/app/: api_types.py  chat.py  enhance.py  graph_prefiltering.py  importing.py  main.py  processing.py  text2cypher.py  utils.py
notebooks/: document_scatter.ipynb
ui/: .prettierrc.js  Dockerfile  Introduction.py  index.html  package-lock.json  package.json  vite.config.ts
ui/pages/: 1_Graph_construction.py  1_Import_articles.py  2_Chat_agent.py  2_Natural_language_processing.py  3_Chat_agent.py  3_Enhance_entities.py  4_Dashboard.py  5_Chat_agent.py  diffbot_enhance_api_try.ipynb
ui/src/: App.tsx  index.css  main.tsx
ui/src/api/: axios.ts  dashboard.ts  enhance.ts  import-articles.ts  import.ts  index.ts  network.ts  nlp.ts  schema.ts
ui/src/components/Chat/: index.tsx  interfaces.ts  styles.module.css  utils.ts
ui/src/components/Dashboard/: index.tsx  styles.module.css
ui/src/components/EnhanceEntities/: index.tsx
ui/src/components/ImportArticles/: index.tsx
ui/src/global/: constants.ts  state.ts
ui/src/pages/: ChatAgentPage.tsx  DashboardPage.tsx  EnhanceEntitiesPage.tsx  ImportArticlesPage.tsx  IntroductionPage.tsx  NaturalLanguageProcessingPage.tsx  NetworkGraphPage.tsx
ui_legacy/pages/: 1_Import_articles.py  2_Natural_language_processing.py  3_Enhance_entities.py  4_Dashboard.py  5_Chat_agent.py
(+19 files in other folders)
